# wrolp

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icons.mjs
src/: App.css  App.tsx  commands.ts  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  ssh_session.rs  ssh_test.rs
src/components/: ConnectionManager.tsx  FilePanel.tsx  Terminal.tsx  Titlebar.tsx
src/styles/: App.scss  _variables.scss  index.scss
ssh-terminal/: .gitignore  index.html  package.json  tsconfig.json
ssh-terminal/src/: commands.ts  index.css  types.ts
ssh-terminal/src-tauri/: Cargo.toml  tauri.conf.json
ssh-terminal/src-tauri/src/: commands.rs  lib.rs
ssh-terminal/src/components/: Terminal.tsx
