[package]
name = "wrolp-terminal"
version = "0.0.2"
edition = "2021"
default-run = "wrolp-terminal"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
log = "0.4"
simplelog = "0.12"
russh = "0.44"
russh-keys = "0.44"
russh-sftp = "2"
async-trait = "0.1"
anyhow = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[[bin]]
name = "wrolp-terminal"
path = "src/main.rs"

[[bin]]
name = "ssh_test"
path = "src/ssh_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
