[package]
name = "ssh-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full", "process"] }
dirs = "6"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }
